fix(Makefile): fix Makefile relink and rearrange files

--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -2,37 +2,35 @@ NAME = push_swap
 
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
-AR = ar -crs
 RM = rm -f
-COMMAND_DIR = ./command/
-FT_PRINTF_DIR = ./ft_printf
-FT_PRINTF_FLAG = -L$(FT_PRINTF_DIR) -lftprintf
-LIBFTPRINTF = $(FT_PRINTF_DIR)/libftprintf.a
-LIBFT_DIR = ./libft
-LIBFT_FLAG = -L$(LIBFT_DIR) -lft
-LIBFT = $(LIBFT_DIF)/libft.a
 
-SRCS = 	deque.c \
-		init.c \
-		push_swap.c \
-		utils.c \
+FT_PRINTF_DIR = ./lib/ft_printf
+FT_PRINTF_FLAG = -L$(FT_PRINTF_DIR) -lftprintf
+
+LIBFT_DIR = ./lib/libft
+LIBFT_FLAG = -L$(LIBFT_DIR) -lft
+
+HEADER = -I ./include
+SRC_DIR = ./src/
+COMMAND_DIR = ./command/
+
+SRCS = 	$(SRC_DIR)deque.c \
+		$(SRC_DIR)init.c \
+		$(SRC_DIR)push_swap.c \
+		$(SRC_DIR)utils.c \
 		$(COMMAND_DIR)push.c \
 		$(COMMAND_DIR)reverse_rotate.c \
 		$(COMMAND_DIR)rotate.c \
-		$(COMMAND_DIR)swap.c \
+		$(COMMAND_DIR)swap.c
 
 OBJECTS = $(SRCS:.c=.o)
 
 all : $(NAME)
 
-$(NAME) : $(OBJECTS) $(LIBFT) $(LIBFTPRINTF)
-			$(CC) $(CFLAGS) -g -fsanitize=address $(OBJECTS) $(LIBFT_FLAG) $(FT_PRINTF_FLAG) -o $(NAME)
-
-$(LIBFTPRINTF) :
-	$(MAKE) -C $(FT_PRINTF_DIR)
-
-$(LIBFT) :
-	$(MAKE) -C $(LIBFT_DIR)
+$(NAME) : $(OBJECTS)
+			@make -C $(FT_PRINTF_DIR)
+			@make -C $(LIBFT_DIR)
+			$(CC) $(CFLAGS) $(OBJECTS) $(HEADER) $(LIBFT_FLAG) $(FT_PRINTF_FLAG) -o $(NAME)
 
 clean :
 	$(RM) $(OBJECTS)
