--- a/philo/Makefile
+++ b/philo/Makefile
@@ -3,17 +3,17 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: jimpark <jimpark@student.42seoul.kr>       +#+  +:+       +#+         #
+#    By: jimpark <jimpark@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/16 19:34:57 by jimpark           #+#    #+#              #
-#    Updated: 2023/04/17 20:32:04 by jimpark          ###   ########.fr        #
+#    Updated: 2023/04/24 17:46:18 by jimpark          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = philo
 
 CC = cc
-CFLAGS = -Wall -Wextra -Werror -g -fsanitize=thread
+CFLAGS = -Wall -Wextra -Werror
 RM = rm -f
 
 HEADER = -I ./includes
@@ -23,6 +23,8 @@ SRCS = 	$(SRC_DIR)action.c \
 		$(SRC_DIR)init.c \
 		$(SRC_DIR)main.c \
 		$(SRC_DIR)utils.c \
+		$(SRC_DIR)mornitoring.c \
+		$(SRC_DIR)routine.c \
 
 OBJECTS = $(SRCS:.c=.o)
 
