--- a/philo/Makefile
+++ b/philo/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: jimpark <jimpark@student.42.fr>            +#+  +:+       +#+         #
+#    By: jimpark <jimpark@student.42seoul.kr>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/16 19:34:57 by jimpark           #+#    #+#              #
-#    Updated: 2023/04/24 17:46:18 by jimpark          ###   ########.fr        #
+#    Updated: 2023/05/01 20:43:19 by jimpark          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
