--- a/cpp_module/cpp_04/ex00/Makefile
+++ b/cpp_module/cpp_04/ex00/Makefile
@@ -3,6 +3,8 @@ NAME = ex00
 SRCS = main.cpp \
 		Animal.cpp \
 		Cat.cpp \
-		Dog.cpp
+		Dog.cpp \
+		WrongAnimal.cpp \
+		WrongCat.cpp
 
 include ../template.mk
