--- a/cpp_module/cpp_05/ex02/Makefile
+++ b/cpp_module/cpp_05/ex02/Makefile
@@ -2,6 +2,9 @@ NAME = ex02
 
 SRCS = main.cpp \
 		Bureaucrat.cpp \
-		AForm.cpp
+		AForm.cpp \
+		PresidentialPardonForm.cpp \
+		RobotomyRequestForm.cpp \
+		ShrubberyCreationForm.cpp
 
 include ../template.mk
