--- a/inception/srcs/docker-compose.yml
+++ b/inception/srcs/docker-compose.yml
@@ -1,4 +1,12 @@
 services:
+  nginx:
+    build: ./requirements/nginx
+    image: nginx:42
+    networks:
+      - inception
+    restart: always
+    ports:
+      - 443:443
   mariadb:
     build: ./requirements/mariadb
     image: mariadb:42
@@ -21,5 +29,5 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device: ../home/jimpark/data/mariadb
+      device: /Users/jimpark/Desktop/42seoul/inception/home/jimpark/data/mariadb
       o: bind
