wordpress 추가 후 오류 수정 중

--- a/inception/srcs/.env
+++ b/inception/srcs/.env
@@ -5,4 +5,16 @@ MYSQL_ROOT=root
 MYSQL_ROOT_PASSWORD=qwer1234
 MYSQL_USER=jimpark
 MYSQL_PASSWORD=qwer1234
-MYSQL_DATABASE=Member
+MYSQL_DATABASE=member
+
+# WORDPRESS SETUP
+WP_TITLE=WORDPRESS
+WP_LOCALE=en_US
+
+WP_ADMIN_USER=jimpark
+WP_ADMIN_PASSWORD=jimpark
+WP_ADMIN_EMAIL=jimpark@student.42seoul.kr
+
+WP_USER=huipark
+WP_USER_PASSWORD=huipark
+WP_USER_EMAIL=huipark@student.42seoul.kr
