--- a/inception/srcs/docker-compose.yml
+++ b/inception/srcs/docker-compose.yml
@@ -7,6 +7,24 @@ services:
     restart: always
     ports:
       - 443:443
+    volumes:
+      - wordpress_data:/var/www/
+    depends_on:
+      - wordpress
+  wordpress:
+    build: ./requirements/wordpress
+    image: wordpress:42
+    networks:
+      - inception
+    restart: always
+    expose:
+      - 9000
+    env_file:
+      - ./.env
+    volumes:
+      - wordpress_data:/var/www/
+    depends_on:
+      - mariadb
   mariadb:
     build: ./requirements/mariadb
     image: mariadb:42
@@ -25,6 +43,12 @@ networks:
     driver: bridge
 
 volumes:
+  wordpress_data:
+    driver: local
+    driver_opts:
+      type: none
+      device: /Users/jimpark/Desktop/42seoul/inception/home/jimpark/data/wordpress
+      o: bind
   mariadb_data:
     driver: local
     driver_opts:
