--- a/inception/srcs/requirements/mariadb/Dockerfile
+++ b/inception/srcs/requirements/mariadb/Dockerfile
@@ -2,13 +2,11 @@ FROM debian:bullseye
 
 RUN apt-get update -y && \
     apt-get upgrade -y && \
-    apt-get install -y \
-    mariadb-server \
-    mariadb-client
+    apt-get install -y mariadb-server
 
 COPY ./conf/mariadb-server.cnf /etc/my.cnf.d/
-COPY ./tools/start_mariadb.sh /home
+COPY ./tools/start_mariadb.sh /usr/local/bin/
 
 EXPOSE 3306
 
-ENTRYPOINT ["sh", "/home/start_mariadb.sh"]
+ENTRYPOINT ["sh", "/usr/local/bin/start_mariadb.sh"]
