--- a/inception/srcs/requirements/mariadb/Dockerfile
+++ b/inception/srcs/requirements/mariadb/Dockerfile
@@ -4,7 +4,7 @@ RUN apt-get update -y && \
     apt-get upgrade -y && \
     apt-get install -y mariadb-server
 
-COPY ./conf/mariadb-server.cnf /etc/my.cnf.d/
+COPY ./conf/my.cnf /etc/mysql/
 COPY ./tools/start_mariadb.sh /usr/local/bin/
 
 EXPOSE 3306
