--- a/inception/srcs/requirements/mariadb/conf/my.cnf
+++ b/inception/srcs/requirements/mariadb/conf/my.cnf
@@ -15,8 +15,8 @@
 # * Basic Settings
 #
 user            = mysql
-pid-file        = /var/lib/mysql/mysqld.pid
-socket          = /var/lib/mysql/mysqld.sock
+pid-file        = /run/mysqld/mysqld.pid
+socket          = /run/mysqld/mysqld.sock
 port            = 3306
 basedir         = /usr
 datadir         = /var/lib/mysql
