--- a/inception/srcs/requirements/nginx/Dockerfile
+++ b/inception/srcs/requirements/nginx/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get update -y && \
     apt-get install nginx -y && \
     apt-get install openssl -y
 
-COPY  ./conf/nginx.cnf /etc/nginx/sites-available/
+COPY  ./conf/default /etc/nginx/sites-available/
 
 COPY ./tools/ssl-keygen.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/ssl-keygen.sh && ssl-keygen.sh
