--- a/inception/srcs/.env
+++ b/inception/srcs/.env
@@ -5,7 +5,7 @@ MYSQL_ROOT=root
 MYSQL_ROOT_PASSWORD=qwer1234
 MYSQL_USER=jimpark
 MYSQL_PASSWORD=qwer1234
-MYSQL_DATABASE=member
+MYSQL_DATABASE=wp_db
 
 # WORDPRESS SETUP
 WP_TITLE=WORDPRESS
